syntax = "proto3";

package tari.dht.envelope;

import "google/protobuf/timestamp.proto";

enum DhtMessageType {
    // Indicated this message is not a DHT message
    DhtMessageTypeNone = 0;
    // Join Request
    DhtMessageTypeJoin = 1;
    // Discovery request
    DhtMessageTypeDiscovery = 2;
    // Response to a discovery request
    DhtMessageTypeDiscoveryResponse = 3;
    // Request stored messages from a node
    DhtMessageTypeSafRequestMessages = 20;
    // Stored messages response
    DhtMessageTypeSafStoredMessages = 21;
}

message DhtHeader {
    uint32 version = 1;
    oneof destination {
        // The sender has chosen not to disclose the message destination
        bool unknown = 2;
        // Destined for a particular public key
        bytes public_key = 3;
        // Destined for a particular node id, or network region
        bytes node_id = 4;
    }

    // Origin public key of the message. This can be the same peer that sent the message
    // or another peer if the message should be forwarded. This is optional but MUST be specified
    // if the ENCRYPTED flag is set.
    // If an ephemeral_public_key is specified, this MUST be encrypted using a derived ECDH shared key
    bytes origin_mac = 5;
    // Ephemeral public key component of the ECDH shared key. MUST be specified if the ENCRYPTED flag is set.
    bytes ephemeral_public_key = 6;
    // The type of message
    DhtMessageType message_type = 7;
    // The network for which this message is intended (e.g. TestNet, MainNet etc.)
    Network network = 8;
    uint32 flags = 9;
    // Message trace ID
    // TODO: Remove for mainnet or when testing message traces is not required
    uint64 message_tag = 10;
    // Expiry timestamp for the message
    google.protobuf.Timestamp expires = 11;
}

enum Network {
    // Main net (default)
    NetworkMainNet = 0;
    // Test net
    NetworkTestNet = 1;
    // Network used for local tests
    NetworkLocalTest = 2;
    // Ridcully
    NetworkRidcully = 3;
    // Stibbons
    NetworkStibbons = 4;
    // Weatherwax
    NetworkWeatherwax = 5;
}

message DhtEnvelope {
    DhtHeader header = 1;
    bytes body = 2;
}

// The Message Authentication Code (MAC) message format of the decrypted `DhtHeader::origin_mac` field
message OriginMac {
    bytes public_key = 1;
    bytes signature = 2;
}
